<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/main"
            />
        <item
            android:id="@+id/nav_diary"
            android:title="@string/myDiary" />
        <item
            android:id="@+id/nav_marks"
            android:title="@string/myMarks" />
        <item
            android:id="@+id/nav_homework"
            android:title="@string/myHomework" />
        <!--<item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />-->
        <item
            android:id="@+id/nav_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_message"
            android:title="@string/messages" />
    </group>


</menu>
